dev.out

> pivot-table-c@0.1.0 dev
> BABEL_OUTPUT=esm babel src --extensions ".ts,.tsx,.js,.jsx" --watch --copy-files --out-dir esm

Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
SyntaxError: /opt/superset_roma/ptc/src/plugin/pivotTable.ts: Unexpected token, expected "," (17:9)

  15 |   )
  16 |   return (
> 17 |     <div ref={dragRef} style={{ opacity }}>
     |          ^
  18 |       {text}
  19 |     </div>
  20 |   )
    at Parser._raise (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:569:17)
    at Parser.raiseWithData (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:562:17)
    at Parser.raise (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:523:17)
    at Parser.unexpected (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:3601:16)
    at Parser.expect (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:3575:28)
    at Parser.tsParseDelimitedListWorker (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:7929:14)
    at Parser.tsParseDelimitedList (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:7898:25)
    at Parser.tsParseBracketedList (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:7951:25)
    at Parser.tsParseTypeParameters (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:8063:24)
    at /opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:9913:29 {
  loc: Position { line: 17, column: 9 },
  pos: 341,
  code: 'BABEL_PARSE_ERROR',
  reasonCode: 'UnexpectedToken'
}
Successfully compiled 19 files with Babel (3491ms).
Successfully compiled 1 file with Babel (281ms).
Successfully compiled 1 file with Babel (204ms).
Successfully compiled 1 file with Babel (173ms).
